[tool.poetry]
name = "auto-hic"
version = "0.1.0"
description = "A rectify tool for hic operate."
authors = ["Swindler <“1033199817@qq.com”>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.3"
hic-straw = "^1.3.1"
colorlog = "^6.7.0"
scipy = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua-source"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true