[tool.poetry]
name = "auto-hic"
version = "0.1.0"
description = "A tool to rectify hic assembly."
authors = ["Swindler <“1033199817@qq.com”>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
hic-straw = "^1.3.1"
scipy = "^1.9.1"
matplotlib = "<3.3"
colorlog = "^6.7.0"
scikit-image = "^0.19.3"
labelme = "^5.0.1"
shapely = "^1.8.4"
opencv-python = "^4.6.0.66"
scikit-learn = "^1.1.2"
sklearn = "^0.0"
seaborn = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua-source"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
