[tool.poetry]
name = "auto-hic"
version = "v0.9.3"
description = "A tool to rectify hic assembly."
authors = ["Swindler <“1033199817@qq.com”>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
hic-straw = "^1.3.1"
scipy = "^1.9.1"
matplotlib = "3.6.2"
colorlog = "^6.7.0"
scikit-image = "^0.19.3"
shapely = "^1.8.4"
opencv-python = "^4.6.0.66"
scikit-learn = "^1.1.2"
sklearn = "^0.0"
seaborn = "^0.12.0"
typer = "^0.6.1"
rich = "^12.5.1"
configobj = "^5.0.6"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
memory-profiler = "^0.60.0"
line-profiler = "^3.5.1"
openpyxl = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua-source"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true
